# TextReader

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  README.md  pyproject.toml
desktop/: text-reader-app.desktop
scripts/: run_text_reader.sh  trigger_text_reader.sh
src/text_reader_app/: __init__.py  __main__.py  app_bootstrap.py  app_runtime_paths.py  application_controller.py
src/text_reader_app/audio/: __init__.py  audio_playback_controller.py
src/text_reader_app/capture/: __init__.py  clipboard_reader.py  linux_selection_reader.py  selection_capture_common.py  text_capture_service.py  windows_selection_reader.py
src/text_reader_app/domain/: __init__.py  models.py
src/text_reader_app/gui/: __init__.py  confirm_delete_dialog.py  edit_regenerate_dialog.py  hotkey_change_dialog.py  player_window.py  preferences_options.py  settings_window.py  style.qss  style_dark.qss  style_light.qss  style_loader.py  synthesis_worker.py  tray_controller.py
src/text_reader_app/history/: __init__.py  history_navigation.py  history_repository.py
src/text_reader_app/hotkeys/: __init__.py  global_shortcut_portal.py  global_shortcut_windows.py  gnome_shell_hotkey.py  keyboard_hook_service.py  local_command_bridge.py  trigger_parser.py
src/text_reader_app/settings/: __init__.py  settings_repository.py
src/text_reader_app/tts/: __init__.py  qwen_runtime_config.py  qwen_speech_synthesizer.py  tts_subprocess.py
